--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
+    <script src='https://g200kg.github.io/webaudio-tinysynth/webaudio-tinysynth.js'></script>
     <script type="module" src="./solfetta.js"></script>
 </head>
 
