--- a/src/index_template.html
+++ b/src/index_template.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="viewport-fit=cover,width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <script src='https://g200kg.github.io/webaudio-tinysynth/webaudio-tinysynth.js'></script>
 </head>
 
 <body>
